# starace

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README  README.md  SDL2_gamecontrollerdb.txt  compile.sh  compiler.cmake  config.cfg  fragmentShader.frag  functions.cmake  glm.cmake  jets.cfg  maps.cfg  vertexShader.vert  weapons.cfg
assets/: CMakeLists.txt
assets/fonts/: CMakeLists.txt
assets/lang/: CMakeLists.txt  en.csv  en.lang  en.txt
assets/misc/: CMakeLists.txt  a3.jet  a5.jet  blaster.wpn  callsigns.txt  cannon.wpn  darkspace.map  enemy.wpn  init.txt  jets.cfg  laser.wpn  ps4_atlas.txt  rocket.wpn  ui_atlas.txt  weapons.cfg
assets/models/: CMakeLists.txt
assets/shaders/: CMakeLists.txt  afterglow.frag  antialias_fxaa.comp  beam.frag  beam.vert  blur_desaturate.comp  gamma.comp  glow.frag  line3_strip_color.vert  lines_color1.frag  mesh.frag  particles_blob.frag  projectile.frag  sprite_sequence.frag  sprite_sequence.vert  sprite_sequence_colors.vert  sprite_sequence_rgba.frag  thruster.frag  thruster.vert  thruster2.vert  ui_rings.vert
assets/sounds/: CMakeLists.txt
assets/textures/: CMakeLists.txt  a2.tga  a3.tga  a4.tga  atlas_ui.tga  blaster.dds  cannon.dds  cyber_ring1.tga  cyber_ring2.tga  cyber_ring3.tga  horizon.tga  horizon2.tga  init.tga  material.tga  plasma.tga  ps4_atlas.tga  xbox_atlas.tga
assets/ui/: CMakeLists.txt  customize.ui  gameplay.ui  mainmenu.ui  missionselect.ui  pause.ui  result.ui  settings.ui  settings_audio.ui  settings_display.ui  settings_game.ui
engine/config/: CMakeLists.txt  config.cpp
engine/engine/: CMakeLists.txt  controller_state.hpp  engine.cpp  filesystem.cpp  material_setup.cpp  material_setup.hpp  savesystem.cpp
engine/engine/public/engine/: engine.hpp  math.hpp  resource_map.hpp  savesystem.hpp
engine/input/: CMakeLists.txt  remapper.cpp
engine/input/public/input/: action.hpp  actuator.hpp  mouse_event.hpp
engine/math/: CMakeLists.txt  math.hpp
engine/renderer/: CMakeLists.txt
engine/renderer/public/renderer/: buffer.hpp  display_mode.hpp  pipeline.hpp  renderer.hpp  texture.hpp
engine/renderer/vulkan/: CMakeLists.txt  buffer_vk.cpp  command_pool.hpp  debug_messanger.hpp  descriptor_set.cpp  device.cpp  device.hpp  device_memory.cpp  image.cpp  image.hpp  instance.cpp  instance.hpp  pipeline_vk.cpp  pipeline_vk.hpp  queue_manager.cpp  renderer_vk.cpp  renderer_vk.hpp  renderpass.cpp  renderpass.hpp  shader.hpp  swapchain.cpp  swapchain.hpp  utils_vk.cpp  utils_vk.hpp  vk.def
engine/ui/: CMakeLists.txt  animframe.cpp  animframe.hpp  button.cpp  button.hpp  combobox.cpp  combobox.hpp  data_model.cpp  decorator.cpp  decorator.hpp  font.cpp  font_map.cpp  footer.cpp  footer.hpp  glow.cpp  glow.hpp  image.cpp  image.hpp  label.cpp  lockit.cpp  message_box.cpp  nineslice.cpp  nineslice.hpp  progressbar.cpp  progressbar.hpp  property.cpp  screen.cpp  scroll_index.cpp  spinbox.cpp  spinbox.hpp
engine/ui/public/ui/: anchor.hpp  animframe.hpp  data_model.hpp  font.hpp  font_map.hpp  image.hpp  input.hpp  label.hpp  lockit.hpp  message_box.hpp  nineslice.hpp  option.hpp  pipeline.hpp  progressbar.hpp  property.hpp  screen.hpp  spinbox.hpp  sprite.hpp  spritegen.hpp  tab_order.hpp  var.hpp  widget.hpp
engine/unicode/: CMakeLists.txt  unicode.cpp
engine/unicode/public/unicode/: unicode.hpp
src/: .clang-format  Bullet.cpp  Bullet.h  Button.cpp  Button.h  CMakeLists.txt  Circle.cpp  Circle.h  Enemy.cpp  Enemy.h  Font.cpp  Font.h  Jet.cpp  Jet.h  Map.cpp  Map.h  Model.cpp  Model.h  Quaternion.cpp  Quaternion.h  Road.cpp  Road.h  Road_drawing.cpp  Road_keyboard.cpp  SA.h  SAObject.cpp  SAObject.h  Shield.cpp  Shield.h  Texture.cpp  Texture.h  Thruster.cpp  Thruster.h  action_state_tracker.cpp  action_state_tracker.hpp  anchor.hpp  async_io.cpp  async_io.hpp  autoaim.hpp  autolerp.hpp  (+150 more)
src/audio/: CMakeLists.txt  audio.cpp
src/audio/public/audio/: audio.hpp
src/ccmd/: CMakeLists.txt  ccmd.cpp
src/config/: CMakeLists.txt  cfg.hpp  config.cpp
src/config/public/config/: config.hpp
src/cooker/: CMakeLists.txt  cooker_atlas.cpp  cooker_callsign.cpp  cooker_common.hpp  cooker_dds.cpp  cooker_dds.hpp  cooker_font.cpp  cooker_lang.cpp  cooker_obj.cpp  cooker_pak.cpp  cooker_tga.hpp
src/engine/: CMakeLists.txt  action_mapping.cpp  action_mapping.hpp  async_io.cpp  controller_state.hpp  engine.cpp  filesystem.cpp  fps_meter.cpp  savesystem.cpp
src/extra/: CMakeLists.txt  obj.cpp
src/input/: CMakeLists.txt  remapper.cpp
src/platform/: CMakeLists.txt  utils.cpp
src/profiler/: CMakeLists.txt
src/renderer/: CMakeLists.txt  renderer.cpp
src/renderer/opengl/: CMakeLists.txt  renderer_gl.cpp
src/renderer/vulkan/: CMakeLists.txt  bindpoints.hpp  buffer_array.cpp  buffer_array.hpp  buffer_pool.cpp  buffer_pool.hpp  buffer_vk.cpp  buffer_vk.hpp  clear.cpp  clear.hpp  command_pool.cpp  command_pool.hpp  debug_messanger.cpp  debug_messanger.hpp  descriptor_set.cpp  descriptor_set.hpp  device.cpp  device.hpp  device_memory.cpp  device_memory.hpp  frame.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  pipeline_vk.cpp  pipeline_vk.hpp  queue_manager.cpp  queue_manager.hpp  render_target.cpp  render_target.hpp  renderer_vk.cpp  renderer_vk.hpp  renderpass.cpp  renderpass.hpp  shader.cpp  shader.hpp  single_time_command.cpp  single_time_command.hpp  swapchain.cpp  (+11 more)
src/shaders/: CMakeLists.txt  sprite_sequence.frag  sprite_sequence.vert  sprite_sequence_colors.vert
src/shared/: CMakeLists.txt
src/ui/: CMakeLists.txt  animframe.cpp  atlas.cpp  button.cpp  combobox.cpp  data_model.cpp  font.cpp  footer.cpp  glow.cpp  glow.hpp  image.cpp  label.cpp  linear_atlas.cpp  lockit.cpp  message_box.cpp  nineslice.cpp  progressbar.cpp  property.cpp  remapper.cpp  screen.cpp  scroll_index.cpp  spinbox.cpp  spritegen.cpp  widget.cpp
tests/: CMakeLists.txt  test_bit_index_iterator.cpp  test_ccmd.cpp  test_cfg_iterator.cpp  test_config.cpp  test_fixed_map.cpp  test_fixed_map_view.cpp  test_hash.cpp  test_max_score_element.cpp  test_savesystem.cpp  test_stack_vector.cpp  test_unicode.cpp
(+315 files in other folders)
