add_subdirectory( fonts )
add_subdirectory( models )
add_subdirectory( shaders )
add_subdirectory( sounds )
add_subdirectory( textures )
add_subdirectory( ui )
add_subdirectory( misc )

pak_file( data "${CMAKE_CURRENT_SOURCE_DIR}/misc/jets.cfg" )
pak_file( data "${CMAKE_CURRENT_SOURCE_DIR}/misc/weapons.cfg" )
pak_file( data "${CMAKE_CURRENT_SOURCE_DIR}/misc/ui_atlas.txt" )
pak_file( data "${CMAKE_CURRENT_SOURCE_DIR}/lang/en.txt" )
