function( declare_cooker name )
    add_executable( ${name} )
    target_link_libraries( ${name} cxx::flags extra )
    set_vs_directory( ${name} cooker )
endfunction()

declare_cooker( cooker_dds )
declare_cooker( cooker_font )
declare_cooker( cooker_obj )
declare_cooker( cooker_pak )
declare_cooker( cooker_atlas )

target_sources( cooker_obj PRIVATE cooker_obj.cpp )
target_sources( cooker_dds PRIVATE cooker_dds.cpp cooker_dds.hpp )
target_sources( cooker_pak PRIVATE cooker_pak.cpp )
target_sources( cooker_font PRIVATE cooker_font.cpp cooker_dds.hpp )
target_sources( cooker_atlas PRIVATE cooker_atlas.cpp )
target_link_libraries( cooker_font Freetype::Freetype )
target_link_libraries( cooker_atlas config shared )