function( declare_cooker name )
    add_executable( ${name} )
    target_sources( ${name} PRIVATE cooker_common.hpp )
    target_link_libraries( ${name} cxx::flags extra )
    set_vs_directory( ${name} cooker )
endfunction()

declare_cooker( cooker_atlas )
declare_cooker( cooker_callsign )
declare_cooker( cooker_dds )
declare_cooker( cooker_font )
declare_cooker( cooker_lang )
declare_cooker( cooker_obj )
declare_cooker( cooker_pak )

target_sources( cooker_atlas PRIVATE cooker_atlas.cpp )
target_sources( cooker_callsign PRIVATE cooker_callsign.cpp )
target_sources( cooker_dds PRIVATE cooker_dds.cpp cooker_dds.hpp )
target_sources( cooker_font PRIVATE cooker_font.cpp cooker_dds.hpp )
target_sources( cooker_lang PRIVATE cooker_lang.cpp )
target_sources( cooker_obj PRIVATE cooker_obj.cpp )
target_sources( cooker_pak PRIVATE cooker_pak.cpp )
target_link_libraries( cooker_atlas config shared )
target_link_libraries( cooker_font Freetype::Freetype )
target_link_libraries( cooker_lang shared )
target_link_libraries( cooker_obj ccmd )
